* Mon Feb 17 2020 Pavel Slama <pslama@redhat.com> 7.57-1.git20200217.5d045dc
- remove backoff as smartsheet sdk already does that

* Mon Feb 17 2020 Pavel Slama <pslama@redhat.com> 7.56-4.git20200217.1d1635d
- actual required version

* Wed Feb 12 2020 Pavel Slama <pslama@redhat.com> 7.56-3.git20200217.dbec8d0
- add python-backoff dep

* Fri Feb 07 2020 Pavel Slama <pslama@redhat.com> 7.56-2.git20200217.a779863
- strip smartsheet permalinks of querystring

* Thu Jan 30 2020 Pavel Slama <pslama@redhat.com> 7.56-1.git20200217.f64faee
- optionally regenerate slugs for tjx imports

* Wed Dec 04 2019 Aleksandr Sterkhov <i@likeon.name> 7.52-3.git20200217.fea47c4
- Fixed tasks slugs numeration

* Thu Nov 28 2019 Aleksandr Sterkhov <i@likeon.name> 7.52-2.git20200217.3586aaa
- Task slug generator: truncating to 255 characters

* Thu Nov 28 2019 Pavel Slama <pslama@redhat.com> 7.52-1.git20200217.1e83243
- update changelog

* Wed Nov 27 2019 Pavel Slama <pslama@redhat.com> 7.52-1.git20191127.da3fe63
- updated ics test file (icalendar 4.0.3)

* Wed Nov 27 2019 Aleksandr Sterkhov <i@likeon.name> 7.50-2.git20191127.346386a
- Generate task slug from full names

* Tue Nov 05 2019 Pavel Slama <pslama@redhat.com> 7.50-1.git20191127.7321280
- update requirements - add icalendar

* Tue Nov 05 2019 Ben Cotton <bcotton@funnelfiasco.com> 7.49-2.git20191127.70bb471
- Add icalendar dependency

* Wed Oct 23 2019 Pavel Slama <pslama@redhat.com> 7.49-1.git20191127.42ecd45
- new distribution flag

* Wed Oct 23 2019 Aleksandr Sterkhov <i@likeon.name> 7.42-3.git20191127.dbadc2d
- Added test to check that smartsheet sheet version changes when schedule been modified

* Fri Sep 27 2019 Pavel Slama <pslama@redhat.com> 7.42-2.git20191127.57e6898
- check that complete percentage value is number

* Wed Jun 05 2019 Pavel Slama <pslama@redhat.com> 7.42-1.git20191127.1da7a26
- add test data regenerate to schedule diff, regenerate actual data
